--- a/start/src/main/resources/application.yml
+++ b/start/src/main/resources/application.yml
@@ -8,15 +8,29 @@ spring:
     driver-class-name: oracle.jdbc.driver.OracleDriver
   profiles:
     include: private
+  mvc:
+    static-path-pattern: /uploads/**
+  web: 
+    resources:
+      static-locations: file:uploads/  
+
+
+
+
 server:
   port: 80
   
+servlet:
+  multipart:
+    max-file-size : 100MB
+    max-request-size : 100MB
  
 mybatis:
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
-    jdbc-type-for-null: NULL
+    jdbc-type-for-null: VARCHAR
   mapper-locations: classpath:mapper/*.xml
+  type-aliases-package: com.kh.start.board.model.vo., com.kh.start.board.model.dto., com.kh.start.comments.model.dto.
 
 logging:
   level:
@@ -25,3 +39,6 @@ logging:
     jdbc.sqlonly: DEBUG
     jdbc.resultset: DEBUG
     jdbc.audit: DEBUG
+
+
+
